--- a/Funcionario/src/main/resources/application-local.properties
+++ b/Funcionario/src/main/resources/application-local.properties
@@ -3,7 +3,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+spring.application.name=funcionario
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
