--- a/Folha-Pagamento/src/main/resources/application.properties
+++ b/Folha-Pagamento/src/main/resources/application.properties
@@ -1,10 +1,15 @@
-spring.application.name=folha-pagamento
+
 server.port=8081
 
+#Kafka
 topic.name=funcionario
 spring.kafka.consumer.group-id=appFuncionario
-
 spring.kafka.bootstrap-servers=localhost:9092
-
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+#Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#Application name
+spring.application.name=folha-pagamento
