Geracao de porta aleatoria

--- a/Funcionario/src/main/resources/application-local.properties
+++ b/Funcionario/src/main/resources/application-local.properties
@@ -12,7 +12,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-server.port=8080
+#Porta aleatoria Eureka
+server.port=${PORT:0}
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Application name
 spring.application.name=funcionario
