--- a/Funcionario/src/main/resources/application-local.properties
+++ b/Funcionario/src/main/resources/application-local.properties
@@ -13,8 +13,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 #Porta aleatoria Eureka
-server.port=${PORT:0}
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+ server.port=8081
+#server.port=${PORT:0}
+#eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Application name
 spring.application.name=funcionario
